fix align center of images

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -778,7 +778,7 @@ figure.wp-block-image > a[href*="uploads"], .wp-block-image figure > a[href*="up
 	clear: both;
 }
 .wp-block-image figure.aligncenter{
-	margin: 0;
+	margin: 0 auto;
 
 	img{
 		display: block;
